--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.1.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vercel/og": "^0.6.3",
     "astro": "^4.16.7",
     "framer-motion": "^11.11.10",
     "react": "^18.3.1",
