--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/react": "^3.6.2",
-    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/react": "4.0.0",
+    "@astrojs/tailwind": "5.1.3",
     "@heroicons/react": "^2.1.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vercel/og": "^0.6.3",
-    "astro": "^4.16.7",
+    "astro": "5.0.3",
     "framer-motion": "^11.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
