--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/react": "4.1.2",
-    "@astrojs/tailwind": "5.1.4",
+    "@astrojs/react": "4.3.0",
     "@heroicons/react": "^2.1.5",
     "@nanostores/react": "^1.0.0",
+    "@tailwindcss/vite": "^4.1.10",
     "@vercel/og": "^0.6.3",
-    "astro": "5.1.1",
+    "astro": "5.9.3",
     "caniuse-lite": "^1.0.30001722",
     "framer-motion": "^11.13.1",
     "nanostores": "^1.0.1",
@@ -24,7 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hotkeys-hook": "^5.1.0",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
